tentativa de reconhecimento das imagens do carrocel

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
             </button>
 
             <div class="imgs-carrossel">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/imgs-ordenadas-carrossel/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
             </div>
 
             <button id="botao-proximo" class="botao-carrossel" onclick="moverImg(+1)">
