terminei o carrossel, a ultima sessão do site, organizei as imagens e fiz ajustes finos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Retiro de Volta pra Casa</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/script.js"></script>
@@ -44,18 +44,78 @@
             </button>
 
             <div class="imgs-carrossel">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
-                <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                <section>
+                    <div>
+                        <h2>Respiração</h2>
+                    </div>
+                    <img src="imgs/img1-respiracao.jpg" alt="atividade respiração">
+                </section>
+                <section>
+                    <div>
+                        <h2>Meditação</h2>
+                    </div>
+                    <img src="imgs/img2-meditacao.jpg" alt="atividade meditação">
+                </section>
+                <section>
+                    <div>
+                        <h2>Yoga</h2>
+                    </div>
+                    <img src="imgs/img3-yoga.jpg" alt="atividade yoga">
+                </section>
+                <section>
+                    <div>
+                        <h2>Dinâmicas de Autoconhecimento</h2>
+                    </div>
+                    <img src="imgs/img4-dinamicas-autoconhecimento.jpg" alt="atividade dinâmicas de autoconhecimento">
+                </section>
+                <section>
+                    <div>
+                        <h2>Rodas de Cura</h2>
+                    </div>
+                    <img src="imgs/img5-rodas-cura.jpg" alt="atividade rodas de cura">
+                </section>
+                <section>
+                    <div>
+                        <h2>Relaxamento</h2>
+                    </div>
+                    <img src="" alt="atividade relaxamento">
+                </section>
+                <section>
+                    <div>
+                        <h2>Medicina do Cacau</h2>
+                    </div>
+                    <img src="imgs/img7-medicina-cacau.jpg" alt="atividade medicina do cacau">
+                </section>
+                <section>
+                    <div>
+                        <h2>Alimentação Natural e Medicinal</h2>
+                    </div>
+                    <img src="imgs/img8-alimentacao-natural.jpg" alt="atividade alimentação natural e medicinal">
+                </section>
+                <section>
+                    <div>
+                        <h2>Silêncio</h2>
+                    </div>
+                    <img src="imgs/img9-silencio.jpg" alt="atividade silêncio">
+                </section>
+                <section>
+                    <div>
+                        <h2>Roda de Canto</h2>
+                    </div>
+                    <img src="imgs/img10-roda-canto.jpg" alt="atividade roda de canto">
+                </section>
+                <section>
+                    <div>
+                        <h2>Cachoeira</h2>
+                    </div>
+                    <img src="imgs/img11-cachoeira.jpg" alt="atividade banho de cachoeira">
+                </section>
+                <section>
+                    <div>
+                        <h2>Canoa Havaiana</h2>
+                    </div>
+                    <img src="imgs/img12-canoa-havaiana.jpg" alt="atividade canoa havaiana">
+                </section>
             </div>
 
             <button id="botao-proximo" class="botao-carrossel" onclick="moverImg(+1)">
@@ -178,6 +238,12 @@ Se você sente o chamado em sua alma para o despertar. A alegria genuína, aceit
                 <p>Reserve sua vaga pelo Whatsapp:</p>
                 <b>+55 11 94005-6949</b>
             </section>
+        </section>
+
+        <section class="ultima-sessao">
+            <p>Sintam nosso amor e luz,<br>onde somos um.<br>Nos vemos em casa!</p>
+            <img src="imgs/simbolo-own.jpg" alt="simbolo do own desenhado na areia da praia">
+            <p>Namastê</p>
         </section>
 
     </main>
