adicionando img de relaxamento no carrossel e tentando arrumar as fontes

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div>
                         <h2>Relaxamento</h2>
                     </div>
-                    <img src="" alt="atividade relaxamento">
+                    <img src="imgs/img6-relaxamento.jpeg" alt="atividade relaxamento">
                 </section>
                 <section>
                     <div>
